# AdventOfCode_2025

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
challenges/: chal01.cpp  chal02.cpp  chal03.cpp  chal04.cpp  chal05.cpp  chal06.cpp  chal07.cpp  chal08.cpp  chal09.cpp  template.cpp
challenges/chal_data/: template.txt
include/: chal01.h  chal02.h  chal03.h  chal04.h  chal05.h  chal06.h  chal07.h  chal08.h  chal09.h  main.h  template.h
src/: CMakeLists.txt  main.cpp
